Fixed profile quizzes to stay a certain size, and to cut off text to prevent growing to much. Made start quiz button actually generate a session with session id and open new tab with it. Did update join quiz to properly join session. ALso updated paths from the old url, to the new path.

--- a/src/quizapp/static/quizapp/css/login.css
+++ b/src/quizapp/static/quizapp/css/login.css
@@ -23,6 +23,21 @@ article{
 	background-color: #54A8B2;
 }
 
+.quizpadded{
+	margin: 10px;
+	padding: 10px;
+	border-radius: 3px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: darkblue;
+	background-color: #54A8B2;
+	width: 30%;
+	word-break: break-all;
+	white-space: normal;
+}
+
+
+
 .boxcenter{
 
 	margin: 1% 20% 1% 20%;
